Updating the accordion lists for the committee to fix the extra spacing.

--- a/_scss/bbg/_site.scss
+++ b/_scss/bbg/_site.scss
@@ -521,3 +521,9 @@ article {
 	}
 }
 
+
+
+//Fixing spacing 
+.bbg__committee-list + .bbg__committee-list {
+	margin-top: 0;
+}
